@@ -77,6 +77,7 @@ lintian (1.24.3) unstable; urgency=low
     + [ADB] When parsing objdump-info, indicate whether a shared object is
       an Ocaml executable.  Also add information on segments which various
       checks scripts use which hadn't made it here yet.
+    + [ADB] Make index() return a hash rather than an array
 
   * man/lintian.1
     + [ADB] Update the list of check scripts, removing the no longer present
